--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -3,9 +3,9 @@
 one:
   title: MyString
   content: MyString
-  user_id: MyString
+  user_id: 1
 
 two:
   title: MyString
   content: MyString
-  user_id: MyString
+  user_id: 1
